service_accounts/deny-sa-secrets.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: check-service-accounts
spec:
  validationFailureAction: Enforce
  background: true
  rules:
    - name: deny-secrets
      match:
        any:
        - resources:
            kinds:
              - ServiceAccount
      validate:
        cel:
          expressions:
            - message: "long lived API tokens are not allowed"
              expression: "!has(object.secrets)"
